# Mariocart-RSVP

./: .dockerignore  .gitignore  Makefile  README.md  test.sh
apps/server/: CMakeLists.txt  CMakePresets.json  pytest.ini  requirements-dev.txt  vcpkg.json
apps/server/.cache/clangd/index/: db.hpp.9F570326A0F38BC0.idx  main.cpp.D02121567431A61E.idx
apps/server/__tests__/: conftest.py  routes.test.py
apps/server/src/: db.hpp  main.cpp
apps/web/: .env.example  PLAN.md  README.md  package-lock.json  package.json
apps/web/public/assets/game/: README.md
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  template.tsx
apps/web/src/app/history/: page.tsx
apps/web/src/app/info1/: page.tsx
apps/web/src/app/rsvp/: page.tsx
apps/web/src/app/rules/: page.tsx
apps/web/src/app/scoring/: page.tsx
apps/web/src/app/standings/: page.tsx
apps/web/src/app/unrsvp/: page.tsx
apps/web/src/components/games/: FlappyGame.tsx  GameCanvas.tsx  GameHud.tsx  GameStartGate.tsx  ReactionGame.tsx
apps/web/src/components/hero/: HeroSection.tsx  HeroTitle.tsx  (+5 more)
apps/web/src/hooks/: useMediaQuery.ts  useNavVisibility.ts  usePrefersReducedMotion.ts  useScrollReveal.ts
apps/web/src/lib/: api.ts  api.types.ts  env.ts  event.ts  schemas.ts  scoring.ts  seed.ts
apps/web/src/state/: rsvpFlow.ts  transition.ts  ui.ts
db/migrations/: 0001_init.sql  0002_summary_tables.sql  0003_game_score_details.sql  0004_game_score_unique.sql  0005_standings_recompute.sql  0006_decommits.sql  0007_RSVP_type.sql
deploy/: Caddyfile  Dockerfile  README.md  docker-compose.yml
(+35 files in other folders)
